syntax = "proto3";

package kurtome.dote.proto.api;

import "api/dotable_list.proto";

message Feed {
  FeedId id = 1;
  repeated FeedItem items = 2;
}

message FeedId {
  oneof id {
    HomeId home_id = 1;
    ProfileId profile_id = 2;
  }
  message HomeId {}
  message ProfileId {
    // if this is not set, this ID represents the currently logged in user
    string username = 1;
  }
}


message FeedItem {
  enum Kind {
    UNKNOWN_ITEM_KIND = 0;
    DOTABLE_LIST = 1;
  }
  Kind kind = 1;

  oneof content {
    FeedDotableList dotable_list = 2;
  }
}

message FeedDotableList {
  DotableList list = 1;
}
